profile dashboards no longer overflowing

--- a/browser/scss/profile/profile-dashboards.scss
+++ b/browser/scss/profile/profile-dashboards.scss
@@ -31,6 +31,7 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
+        width: 100%;
     }
     .dashboard-title {
         padding-top: 20px;
